[chore] intelliJ 코드 컨벤션 적용